<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <EditText
        android:id="@+id/day"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="60dp"
        android:hint="@string/day_hint"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/time"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="30dp"
        android:hint="@string/time_hint"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="149dp"
        android:layout_height="72dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="30dp"
        android:hint="@string/comment_hint"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="60dp"
        android:text="@string/ok_button"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />
</androidx.constraintlayout.widget.ConstraintLayout>